[package]
name = "core-lane-node"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "core-lane-node"
path = "src/main.rs"

[dependencies]
bitcoin = { version = "0.32.0", features = ["rand", "serde"] }
secp256k1 = { version = "0.29", features = ["rand-std", "recovery", "global-context"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
rand = "0.8"
bitcoincore-rpc = "0.19.0"
bitcoincore-rpc-json = "0.19.0"
alloy-primitives = { version = "1.3", features = ["serde"] }
alloy-rlp = "0.3"
alloy-consensus = { version = "1.0", features = ["secp256k1", "serde", "serde-bincode-compat"] }
alloy-eips = "1.0"
alloy-signer = "1.0"
alloy-sol-types = "1.3"
sha3 = "0.10"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ciborium = "0.2"
bs58 = "0.5"
bincode = "1.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
bdk_wallet = { version = "2.2.0", features = ["keys-bip39", "rusqlite"] }
bdk_bitcoind_rpc = "0.22.0"
bdk_electrum = { version = "0.23.0", features = ["use-openssl"] }
