[package]
name = "core-lane"
version = "0.1.0"
edition = "2021"

[lib]
name = "core_lane"
path = "src/lib.rs"

[[bin]]
name = "core-lane-node"
path = "src/main.rs"

[dependencies]
bitcoin = { version = "0.32.0", features = ["rand", "serde"] }
secp256k1 = { version = "0.29", features = ["rand-std", "recovery", "global-context"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
futures = "0.3"
hex = "0.4"
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
serde_tuple = "1.1"
clap = { version = "4.0", features = ["derive"] }
rand = "0.8"
corepc-client = { version = "0.10.0", features = ["client-sync"] }
corepc-types = "0.10.0"
# Enable minreq HTTPS so corepc works with https:// URLs (corepc-client uses jsonrpc with minreq_http)
minreq = { version = "2.14", features = ["https"] }
alloy-primitives = { version = "1.4.0", features = ["serde", "borsh"] }
alloy-rlp = "0.3"
alloy-consensus = { version = "1.0.38", features = ["secp256k1", "serde", "serde-bincode-compat"] }
alloy-eips = "1.0.27"
alloy-signer = "1.0.27"
alloy-sol-types = "1.3.1"
alloy-provider = "1.0.27"
alloy-transport-http = "1.0.38"
alloy-signer-local = "1.0.38"
alloy-rpc-types = "1.0.27"
sha3 = "0.10"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ciborium = "0.2"
bs58 = "0.5"
bincode = "1.3"
borsh = { version = "1.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"], default-features = false }
brotli = "7.0"
rust-s3 = { version = "0.33", features = ["tokio"] }
bdk_wallet = { version = "2.2.0", features = ["keys-bip39", "rusqlite"] }
bdk_bitcoind_rpc = "0.22.0"
bdk_electrum = { version = "0.23.0", features = ["use-openssl"] }
cartesi-machine = { git = "https://github.com/lanelayer/cm-rust-bindings", rev = "80aa8ef3c76ca768c546b035a23524f72e948d47", features = ["download_uarch"] }
alloy-network = "1.0.27"
runner = { git = "https://github.com/lanelayer/cli", rev = "966d8997305c978e7f783d54e7e12307fbbde121", package = "runner" }
client = { git = "https://github.com/EspressoSystems/espresso-network" }
espresso-types = { git = "https://github.com/EspressoSystems/espresso-network" }
hotshot-types = { git = "https://github.com/EspressoSystems/espresso-network" }
surf-disco = "0.9.5"
vbs = "0.1.7"
tide-disco = "0.9.6"